# project-MahyarAfshin

./: CMakeLists.txt  README.md  main.c  menu.c
includeToMain/: AI.c  AI.h  game.c  game.h  map.c  map.h  nextPageMenu.c  nextPageMenu.h  potion.c  potion.h  soldiers.c  soldiers.h  users.c  users.h
